--- a/EtuStackOverflow/Views/Home/Questions.cshtml
+++ b/EtuStackOverflow/Views/Home/Questions.cshtml
@@ -1,4 +1,275 @@
-﻿<div class="text-center">
-    <h1 class="display-4">Questions</h1>
+﻿<div class="row d-flex justify-content-center">
+    <div class="col-md-6">
+        <div class="card">
+            <div class="card-header">
+                <div class="row d-flex justify-content-center">
+                    <div class="col-md-3">
+                        <div class="row d-flex h-100 align-items-center">
+                            <div class="col-md-12 d-flex justify-content-center">
+                                <button class="btn btn-outline-dark" data-toggle="modal" data-target="#filterModal">Filtre</button>
+                                <div class="modal fade" id="filterModal">
+                                    <div class="modal-dialog modal-dialog-centered" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h3 class="modal-title">Filtreler</h3>
+                                                <button type="button" class="close" data-dismiss="modal">
+                                                    <span>&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <form>
+                                                    <div class="form-group">
+                                                        <div class="row">
+                                                            <div class="col-md-6 mb-2 d-flex justify-content-center ">
+                                                                <div class="form-check form-check-inline">
+                                                                    <label class="form-check-label">
+                                                                        <input name="isNewest" type="radio" class="form-check-input" value="">En Yeni
+                                                                    </label>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-6 mb-2 ">
+                                                                <div class="form-check form-check-inline">
+                                                                    <label class="form-check-label">
+                                                                        <input name="isNewest" type="radio" class="form-check-input" value="">En Eski
+                                                                    </label>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-6 mb-2 d-flex justify-content-center ">
+                                                                <div class="form-check form-check-inline">
+                                                                    <label class="form-check-label">
+                                                                        <input name="isSolved" type="radio" class="form-check-input" value="">Çözüldü
+                                                                    </label>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-6 mb-2">
+                                                                <div class="form-check form-check-inline">
+                                                                    <label class="form-check-label">
+                                                                        <input name="isSolved" type="radio" class="form-check-input" value="">Çözülmedi
+                                                                    </label>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-6 d-flex justify-content-center">
+                                                                <div class="form-check form-check-inline ">
+                                                                    <label class="form-check-label">
+                                                                        <input type="checkbox" class="form-check-input" value="">En Popüler
+                                                                    </label>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-6">
+                                                                <div class="form-check form-check-inline">
+                                                                    <label class="form-check-label">
+                                                                        <input type="checkbox" class="form-check-input" value="">Cevaplanmadı
+                                                                    </label>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                            <div class="modal-footer d-flex justify-content-center">
+                                                <button type="button" class="btn btn-info">Filtrele</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-9">
+                        <div class="row d-flex h-100 align-items-center">
+                            <div class="col-md-9">
+                                <div class="input-group icons">
+                                    <input type="text"
+                                           class="form-control rounded"
+                                           placeholder="Search Question"
+                                           aria-label="Search Dashboard">
+                                    <div class="input-group-append">
+                                        <a class="btn-light rounded">
+                                            <span class="input-group-text bg-transparent border-0 fs-4" id="basic-addon1"><i class="mdi mdi-magnify"></i></span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="row d-flex h-100 align-items-center">
+                                    <div class="col-md-12">
+                                        <button class="btn btn-info" data-toggle="modal" data-target="#askQuestionModal">Soru Sor</button>
+                                        <div class="modal fade" id="askQuestionModal">
+                                            <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h3 class="modal-title">Ask A Question</h3>
+                                                        <button type="button" class="close" data-dismiss="modal">
+                                                            <span>&times;</span>
+                                                        </button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        <form>
+                                                            <div class="row">
+                                                                <div class="col-md-12 form-group">
+                                                                    <label for="questionTitle" class="text-dark fw-bold">Question Title</label>
+                                                                    <input type="text"
+                                                                           required
+                                                                           name="questionTitle"
+                                                                           class="form-control rounded"
+                                                                           placeholder="Question Title">
+                                                                </div>
+                                                                <div class="col-md-12 form-group">
+                                                                    <label for="content" class="text-dark fw-bold">Content</label>
+                                                                    <textarea class="form-control h-150px" rows="6" name="content"></textarea>
+                                                                </div>
+                                                            </div>
+                                                        </form>
+
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
+                                                        <button type="button" class="btn btn-info">Ask</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="media media-reply pb-2">
+                    <div class="media-body">
+                        <div type="button">
+                            <div class="d-sm-flex justify-content-between mb-2">
+                                <div>
+                                    <h5 class="mb-sm-0 fw-bold"> Bilgisayar mavi ekran hatasi</h5>
+                                </div>
+                                <div>
+                                    <small class="text-muted ml-3">12 min ago</small>
+                                </div>
+                            </div>
+                            <h7>
+                                Tam bilgisayar boot olurken aciliyor gibi oluyor ama sonra bir bip sesi...
+                            </h7>
+                        </div>
+                        <div class="d-flex justify-content-end">
+                            <div class="d-flex align-items-center">
+                                <div class="">
+                                    <img src="~/images/avatar/1.png" class="rounded-circle" width="30" height="30">
+                                </div>
+                                <div class="ml-2">
+                                    <a class="text-dark" href="/home/users">
+                                        <span>ibrahimhates</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+                <div class="media media-reply pb-2">
+                    <div class="media-body">
+                        <div class="d-sm-flex justify-content-between mb-2">
+                            <div>
+                                <h5 class="mb-sm-0 fw-bold"> Bilgisayar mavi ekran hatasi</h5>
+                            </div>
+                            <div>
+                                <small class="text-muted ml-3">12 min ago</small>
+                            </div>
+                        </div>
+                        <h7>
+                            Tam bilgisayar boot olurken aciliyor gibi oluyor ama sonra bir bip sesi...
+                        </h7>
+                        <div class="d-flex justify-content-end">
+                            <div class="d-flex align-items-center">
+                                <div class="">
+                                    <img src="~/images/avatar/1.png" class="rounded-circle" width="30" height="30">
+                                </div>
+                                <div class="ml-2">
+                                    <a class="text-dark" href="/home/users">
+                                        <span>ibrahimhates</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+                <div class="media media-reply pb-2">
+                    <div class="media-body">
+                        <div class="d-sm-flex justify-content-between mb-2">
+                            <div>
+                                <h5 class="mb-sm-0 fw-bold"> Bilgisayar mavi ekran hatasi</h5>
+                            </div>
+                            <div>
+                                <small class="text-muted ml-3">12 min ago</small>
+                            </div>
+                        </div>
+                        <h7>
+                            Tam bilgisayar boot olurken aciliyor gibi oluyor ama sonra bir bip sesi...
+                        </h7>
+                        <div class="d-flex justify-content-end">
+                            <div class="d-flex align-items-center">
+                                <div class="">
+                                    <img src="~/images/avatar/1.png" class="rounded-circle" width="30" height="30">
+                                </div>
+                                <div class="ml-2">
+                                    <a class="text-dark" href="/home/users">
+                                        <span>ibrahimhates</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+                <div class="media media-reply pb-2">
+                    <div class="media-body">
+                        <div class="d-sm-flex justify-content-between mb-2">
+                            <div>
+                                <h5 class="mb-sm-0 fw-bold"> Bilgisayar mavi ekran hatasi</h5>
+                            </div>
+                            <div>
+                                <small class="text-muted ml-3">12 min ago</small>
+                            </div>
+                        </div>
+                        <h7>
+                            Tam bilgisayar boot olurken aciliyor gibi oluyor ama sonra bir bip sesi...
+                        </h7>
+                        <div class="d-flex justify-content-end">
+                            <div class="d-flex align-items-center">
+                                <div class="">
+                                    <img src="~/images/avatar/1.png" class="rounded-circle" width="30" height="30">
+                                </div>
+                                <div class="ml-2">
+                                    <a class="text-dark" href="/home/users">
+                                        <span>ibrahimhates</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="bootstrap-pagination">
+        <nav>
+            <ul class="pagination justify-content-center">
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span> <span class="sr-only">Previous</span></a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#">1</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#">2</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#">3</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Next"><span aria-hidden="true">&raquo;</span> <span class="sr-only">Next</span></a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </div>
 
