--- a/EtuStackOverflow/Views/Home/Users.cshtml
+++ b/EtuStackOverflow/Views/Home/Users.cshtml
@@ -2,7 +2,7 @@
     <div class="col-md-12">
         <div class="row">
             <div class="col-md-2">
-                <div class="input-group mb-5 icons">
+                <div class="input-group mb-5 icons" >
                     <input type="text"
                            class="form-control rounded"
                            placeholder="Search Dashboard"
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="col-lg-3 col-sm-6" v-for="(user) in userData" :key="user.id">
-        <div class="card shadow">
+        <div class="card shadow" type="button">
             <div class="card-body">
                 <div class="text-center">
                     <img v-bind:src="'/images/founderavatar/' + user.profilePicture" width="125" height="125" class="rounded-circle" alt="">
