--- a/EtuStackOverflow/Views/Home/Questions.cshtml
+++ b/EtuStackOverflow/Views/Home/Questions.cshtml
@@ -194,8 +194,8 @@
     <div class="bootstrap-pagination">
         <nav>
             <ul class="pagination justify-content-center">
-                <li class="page-item" :disabled="!questionPagging.hasPrevios">
-                    <a class="page-link" href="#" aria-label="Previous" v-on:click.prevent="goToPage(questionPagging.currentPage - 1)">
+                <li class="page-item" :disabled="!pagging.hasPrevios">
+                    <a class="page-link" href="#" aria-label="Previous" v-on:click.prevent="goToPage(pagging.currentPage - 1)">
                         <span aria-hidden="true">&laquo;</span>
                         <span class="sr-only">Previous</span>
                     </a>
@@ -203,12 +203,12 @@
                 <li class="page-item"
                     v-for="(page,index) in pages"
                     :key="index"
-                    :class="{ active: page === questionPagging.currentPage }">
+                    :class="{ active: page === pagging.currentPage }">
                     <a class="page-link" href="#" v-on:click.prevent="goToPage(page)" v-if="page !== '...'">{{ page }}</a>
                     <span class="page-link" v-else>{{ page }}</span>
                 </li>
-                <li class="page-item" :disabled="!questionPagging.hasNext">
-                    <a class="page-link" href="#" aria-label="Next" v-on:click.prevent="goToPage(questionPagging.currentPage + 1)">
+                <li class="page-item" :disabled="!pagging.hasNext">
+                    <a class="page-link" href="#" aria-label="Next" v-on:click.prevent="goToPage(pagging.currentPage + 1)">
                         <span aria-hidden="true">&raquo;</span>
                         <span class="sr-only">Next</span>
                     </a>
