--- a/EtuStackOverflow/Views/Home/Users.cshtml
+++ b/EtuStackOverflow/Views/Home/Users.cshtml
@@ -7,7 +7,7 @@
     <div class="col-md-12">
         <div class="row">
             <div class="col-md-2">
-                <div class="input-group mb-5 icons" >
+                <div class="input-group mb-5 icons">
                     <input type="text"
                            class="form-control rounded"
                            placeholder="Search Dashboard"
@@ -22,42 +22,57 @@
             </div>
         </div>
     </div>
-    <div class="col-lg-3 col-sm-6" v-for="(user) in userData" :key="user.id">
+    <div class="col-lg-3 col-sm-6" v-for="(user) in userList" :key="user.id">
         <div class="card shadow" type="button">
             <div class="card-body">
                 <div class="text-center">
-                    <img v-bind:src="'/images/founderavatar/' + user.profilePicture" width="125" height="125" class="rounded-circle" alt="">
-                    <h5 class="mt-3 mb-1">{{user.name}}</h5>
+                    <img v-if="user.profilePhoto.length !== 0" class="rounded-circle" v-bind:src="getProfilePhoto(user.profilePhoto)" width="125" height="125" alt="">
+                    <span v-if="!(user.profilePhoto.length !== 0)"
+                          class="bg-light text-danger rounded-circle fs-1 fw-bold d-flex justify-content-center align-items-center" style="width: 125px;height: 125px;">
+                        {{user.fullName.charAt(0)}}
+                    </span>
+                    <h5 class="mt-3 mb-1">{{user.fullName}}</h5>
                     <p class="m-0">{{user.userName}}</p>
-                    <!-- <a href="javascript:void()" class="btn btn-sm btn-warning">Send Message</a> -->
                 </div>
             </div>
         </div>
     </div>
-    <div class="col-lg-12">
-        <div class="bootstrap-pagination">
-            <nav>
-                <ul class="pagination justify-content-center">
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span> <span class="sr-only">Previous</span></a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">1</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">2</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">3</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next"><span aria-hidden="true">&raquo;</span> <span class="sr-only">Next</span></a>
-                    </li>
-                </ul>
-            </nav>
+    <div v-if="!(userList.length > 0)&&(isLoading)" class="d-flex justify-content-center">
+        <div class="">
+            <div class="custom-question-spinner">
+            </div>
         </div>
-
-
     </div>
-
+    <div v-if="!(userList.length > 0)&&(!isLoading)" class="d-flex justify-content-center">
+        <div class="fw-bold fs-5">
+            <span>
+                Kullanıcı bulunamadı...
+            </span>
+        </div>
+    </div>
+    <div class="col-lg-12">
+        <nav>
+            <ul class="pagination justify-content-center">
+                <li class="page-item" :disabled="!pagging.hasPrevios">
+                    <a class="page-link" href="#" aria-label="Previous" v-on:click.prevent="goToPage(pagging.currentPage - 1)">
+                        <span aria-hidden="true">&laquo;</span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                </li>
+                <li class="page-item"
+                    v-for="(page,index) in pages"
+                    :key="index"
+                    :class="{ active: page === pagging.currentPage }">
+                    <a class="page-link" href="#" v-on:click.prevent="goToPage(page)" v-if="page !== '...'">{{ page }}</a>
+                    <span class="page-link" v-else>{{ page }}</span>
+                </li>
+                <li class="page-item" :disabled="!pagging.hasNext">
+                    <a class="page-link" href="#" aria-label="Next" v-on:click.prevent="goToPage(pagging.currentPage + 1)">
+                        <span aria-hidden="true">&raquo;</span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </div>
